; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_adv_filter.c_btm_ble_update_srvc_data_change.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_adv_filter.c_btm_ble_update_srvc_data_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@BTM_ILLEGAL_VALUE = common dso_local global i32 0, align 4
@BTM_BLE_SCAN_COND_ADD = common dso_local global i64 0, align 8
@BTM_BLE_PF_SRVC_DATA = common dso_local global i32 0, align 4
@BTM_BLE_INVALID_COUNTER = common dso_local global i64 0, align 8
@BTM_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btm_ble_update_srvc_data_change(i64 %0, i32 %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %6, align 8
  %10 = load i32, i32* @BTM_ILLEGAL_VALUE, align 4
  store i32 %10, i32* %7, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %12 = icmp ne %struct.TYPE_3__* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  br label %17

16:                                               ; preds = %3
  br label %17

17:                                               ; preds = %16, %13
  %18 = phi i32* [ %15, %13 ], [ null, %16 ]
  store i32* %18, i32** %8, align 8
  %19 = load i64, i64* %4, align 8
  %20 = load i64, i64* @BTM_BLE_SCAN_COND_ADD, align 8
  %21 = icmp eq i64 %19, %20
  %22 = zext i1 %21 to i64
  %23 = select i1 %21, i32 0, i32 1
  store i32 %23, i32* %9, align 4
  %24 = load i64, i64* %4, align 8
  %25 = load i32, i32* @BTM_BLE_PF_SRVC_DATA, align 4
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* %9, align 4
  %28 = call i64 @btm_ble_cs_update_pf_counter(i64 %24, i32 %25, i32* %26, i32 %27)
  %29 = load i64, i64* @BTM_BLE_INVALID_COUNTER, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %17
  %32 = load i32, i32* @BTM_SUCCESS, align 4
  store i32 %32, i32* %7, align 4
  br label %33

33:                                               ; preds = %31, %17
  %34 = load i32, i32* %7, align 4
  ret i32 %34
}

declare dso_local i64 @btm_ble_cs_update_pf_counter(i64, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
